add loading animation

--- a/src/stylesheet/gameStyle.css
+++ b/src/stylesheet/gameStyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Coda+Caption:wght@800&family=Staatliches&display=swap');
 body {
   margin: 0;
 }
